src/codegen/tests/initialization_test/snapshots/rusty__codegen__tests__initialization_test__type_initializers__struct_initializer_needs_assignments.snap
---
source: src/codegen/tests/initialization_test/type_initializers.rs
expression: msg
---
error[E071]: struct literal must consist of explicit assignments in the form of member := value
  ┌─ <internal>:9:39
  │
9 │                 x : Point := (x := 1, 2);
  │                                       ^ struct literal must consist of explicit assignments in the form of member := value
